# testing

./: README.md
actix-web-tests/: Cargo.toml
actix-web-tests/src/: main.rs
arduinotests/arduino/: rgbledexample.ino
banksystem/rustbank/: Cargo.toml
banksystem/rustbank/src/: main.rs
bevytest/: Cargo.toml
bevytest/src/: main.rs
c_cpptests/calculator/src/: calculator.c  calculator.h
c_cpptests/headers/src/: header.h  main.c
c_cpptests/hello_world/src/: main.c  main.cc
c_cpptests/pointers/src/: main.c  main.h
caesarcipher/py/: main.py
dart-and-flutter/basic-dart-tests/: helloworld.dart
discordpy_tests/: basic_bot.py  get_message_content.py
evil_python/: evil_add.py  evil_add2.py
filesizecolonthree/: main.py
frequencyanalysis/py/: main.py
functional/python/: eulerexample.py  filtering.py
glfwhellotriangle/: Cargo.toml
glfwhellotriangle/src/: main.rs
glfwrstest/: Cargo.toml
glfwrstest/src/: main.rs
markdown_tests/: cmd_vs_bash.md
matplotlib_tests/: basics.py  latex_rendering.py
memoisation/: Cargo.toml
memoisation/src/: main.rs
opencv-python/: imagerecognition.py
programminglanguage/pythontest1/: main.py
programminglanguage/rustasmtest/: Cargo.toml
pygame-tests/coordinates/: cartesian.py  normalcoords.py
python_numeric/: main.py  numeric.py
pytube/: main.py
rust_syntax_tests/colorizing/: Cargo.toml
rustrng/: Cargo.toml
rustrng/src/: main.rs
rustsets/: Cargo.toml
rustsets/src/: main.rs
transpositioncipher/python/: main.py
vernamcipher/rust/: Cargo.toml
vulkan-ash-rs/: Cargo.toml
(+15 files in other folders)
