[package]
name = "actix-web-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = { version = "4.3.1", features = ["secure-cookies"] }
async-recursion = "1.0.4"
color-eyre = "0.6.2"
memoise = "0.3.2"
serde = { version = "1.0.163", features = ["serde_derive"] }
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "chrono", "json", "sqlite", "tls", "uuid"] }
thiserror = "1.0.40"
